JVM tuning for gw findSecBugs subprocess